[project]
name = "kb-mcp-server"
version = "1.0.0"
description = "MCP Server for kb.netapp.com — search and read KB articles with SSO authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.44.0",
    "keyring>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["kb_mcp.py", "auth_manager.py", "kb_client.py", "login_helper.py"]
